--- a/Practica3/src/main/resources/application.properties
+++ b/Practica3/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Practica3
+
+
+# Database configuration
+spring.datasource.url=jdbc:mariadb://localhost:3306/proyectokinan
+spring.datasource.username=root
+spring.datasource.password=coforge
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
