--- a/Practica3/pom.xml
+++ b/Practica3/pom.xml
@@ -54,8 +54,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>RELEASE</version>
-			<scope>provided</scope>
+			<version>1.18.32</version>
 		</dependency>
 
 		<!-- Dependency for JUnit -->
@@ -104,6 +103,8 @@
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
 
 	</dependencies>
 
